--- a/main.css
+++ b/main.css
@@ -34,7 +34,7 @@ header h1 {
 header p {
     font-size: 2.5rem;
     font-weight: bold;
-    color: rgb(97, 162, 237);
+    color: #fff;
     background-color: rgba(0, 0, 0, 0.2);
 }
 
